# test_ws

./: .gitignore  ARDUINO_RELAY_SETUP.md  FIX_MOTOR_CONTROLLER_AFTER_LIDAR.md  MOTOR_CONTROLLER_FIX.md  MOTOR_CONTROLLER_FIXED.md  MOTOR_CONTROLLER_PROTOCOL_ISSUE.md  MOTOR_CONTROLLER_SOLUTION.md  README.md  RELAY_CONTROLLER_TEST.md  ROBOT_BACKUP.md
arduino/: README.md
backup_maps/: EERC_SB.yaml  EERC_SB_LOOP.pgm  EERC_SB_LOOP.yaml  EERC_SB_LOOP_rot10ccw.pgm  EERC_SB_LOOP_rot10ccw.yaml  EERC_SB_LOOP_rot10cw.pgm  EERC_SB_LOOP_rot10cw.yaml  EERC_SB_LOOP_rot6cw.pgm  EERC_SB_LOOP_rot6cw.yaml  EERC_SB_LOOP_rot8cw.pgm  EERC_SB_LOOP_rot8cw.yaml  map_1779824158.pgm  map_1779824158.yaml
backup_maps/EERCsB/EERCsB/: EERCsBsTRAIT.pgm  EERCsBsTRAIT.yaml
scripts/: sync_robot_backup.sh
src/create_robot/: .gitignore
src/create_robot/create_bringup/: CMakeLists.txt
src/create_robot/create_bringup/launch/: genericJ.launch
src/create_robot/create_description/urdf/: lidar.urdf.xacro  lidar_gazebo.urdf.xacro  rectangular_robot.urdf.xacro
src/create_robot/create_driver/: CMakeLists.txt  MAPPING_SETUP.md  NAV2_SETUP.md  ODOMETRY_CALIBRATION.md  README_generic.md  README_sim.md  SLAM_TUNING_GUIDE.md  TUNING_WHEEL_ROTATION.md  package.xml
src/create_robot/create_driver/arduino/relay_controller/: relay_controller.ino
src/create_robot/create_driver/config/: mapper_params_online_async.yaml  nav2_params.yaml  nav2_params_sim.yaml  twist_mux_topics.yaml  xbox_relay_buttons.yaml  xbox_twist_mux.config.yaml
src/create_robot/create_driver/include/create_driver/: generic_motor_driver.h  relay_controller.h
src/create_robot/create_driver/launch/: classic_nav2_sim.launch.py  cleaning_bringup.launch.py  cleaning_preview.launch.py  complete_robot.launch.py  complete_robot_mapping.launch.py  complete_robot_navigation.launch.py  generic_motor_driver.launch.py  navigation_launch_mux.launch.py  rectangular_classic_nav2_sim.launch.py  rectangular_robot.launch.py  rectangular_tb3_world.launch.py  relay_controller.launch.py  teleop_joystick.launch.py  test_robot_model.launch.py  urdf_test.launch.py
src/create_robot/create_driver/maps/: README.md
src/create_robot/create_driver/rviz/: cleaning.rviz  mapping.rviz  rectangular_robot.rviz  robot_view.rviz
src/create_robot/create_driver/scripts/: analyze_cmd_vel_and_drift.py  comprehensive_motor_test.py  coverage_cleaner.py  create_udev_rules.sh  debug_bringup.sh  diagnose_arduino.py  diagnose_motor_controller.sh  drive_one_meter.py  fix_motor_controller.sh  kill_robot_stack.sh  log_serial_communication.py  monitor_cmd_vel.py  monitor_motor_speeds.py  monitor_nav_cmd_path.py  monitor_odom.py  quick_motor_test.py  rotate_one_revolution.py  rotate_wheel_one_turn.py  setup_motor_controller.sh  test_left_wheel_cmdvel.py  test_motor_advanced.py  test_motor_controller.py  test_relay_controller.py  test_yahboom.py
src/create_robot/create_driver/src/: generic_motor_driver.cpp  relay_controller.cpp
src/create_robot/create_driver/urdf/: create_2.urdf  generic_robot.urdf  rectangular_robot.urdf
src/create_robot/create_driver/worlds/: square_building_10ft_hallway.world  turtlebot3_world_spacious.world  turtlebot3_world_spacious_clean.world
workspaces/create3_examples_ws/src/create3_examples/create3_lidar_slam/config/: mapper_params_online_async.yaml  rplidar_node.yaml
workspaces/create3_examples_ws/src/create3_examples/create3_lidar_slam/launch/: sensors_launch.py
workspaces/create_ws/src/create_robot/create_bringup/config/: default.yaml
workspaces/launch_ws/: .gitignore  readme
workspaces/launch_ws/scripts/: multi_launch.sh  tmux_tabs.sh
workspaces/launch_ws/src/py_launch_example/: package.xml  setup.py
workspaces/launch_ws/src/py_launch_example/launch/: my_script_launch.py
workspaces/launch_ws/src/py_launch_example/py_launch_example/: demo_sweep.py
workspaces/sweepbot_ws/: .gitignore  .posegraph  frames_2025-05-30_13.39.11.gv  killros.sh  readme  rosInstallCmds  udev-80-sweepbot.rules
workspaces/sweepbot_ws/map/: .pgm  .yaml  EERCpentElec.yaml  dillman2.yaml  holladaybsmt.pgm  holladaybsmtTWO.pgm  holladaybsmtTWO.yaml  my_map.pgm  test.pgm.yaml
workspaces/sweepbot_ws/src/my_teleop_config/: package.xml  setup.cfg  setup.py
workspaces/sweepbot_ws/src/my_teleop_config/config/: xbox.config.yaml
workspaces/sweepbot_ws/src/my_teleop_config/launch/: teleop.launch.py
workspaces/sweepbot_ws/src/sweepbot/: package.xml  setup.cfg  setup.py
workspaces/sweepbot_ws/src/sweepbot/config/: amcl.yaml  nav2_params.yaml
workspaces/sweepbot_ws/src/sweepbot/launch/: map_server_launch.py  sim_sweepStartup_launch.py  sweepMapping_launch.py  sweepStartup_launch.py  sweepStartup_launch.py.save  test_map_file.py
workspaces/sweepbot_ws/src/sweepbot/map/: EERCpentElec.pgm  dillman.pgm  dillman.yaml  dillman2.pgm  holladaybsmt.yaml  map_server_launch.py  test.pgm.pgm
workspaces/sweepbot_ws/src/sweepbot/sweepbot/: base.py  demo_sweep.py
