<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>py_launch_example</name>
  <version>0.0.0</version>
  <description>TODO: Simple Launch</description>
  <maintainer email="jjhollad@mtu.edu">user</maintainer>
  <license>Apache-2.0</license>
<!--add exec dependants here to bring them in from other packages during starup-->

<exec_depend>demo_nodes_cpp</exec_depend>
<exec_depend>demo_nodes_py</exec_depend>
<exec_depend>ros2launch</exec_depend>
<exec_depend>cartographer</exec_depend>
<exec_depend>turtlebot3_navigation2</exec_depend>
<exec_depend>turtlebot3_gazebo</exec_depend>
<exec_depend>ament_index_python</exec_depend>
<exec_depend>launch</exec_depend>
<exec_depend>launch_ros</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
